--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.androideatit.FoodList">
 
-  <android.support.v7.widget.RecyclerView
-      android:layout_width="368dp"
-      android:layout_height="551dp"
-      android:id="@+id/recycler_food"
-      android:scrollbars="vertical"
-      tools:layout_editor_absoluteY="8dp"
-      tools:layout_editor_absoluteX="8dp" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="368dp"
+        android:layout_height="551dp"
+        android:id="@+id/recycler_food"
+        android:scrollbars="vertical"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
 
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
